// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react/UITitle renders correctly - basic 1`] = `
<div>
  <h1
    class="ui-title ui-title--large--1"
  >
    Test
  </h1>
</div>
`;

exports[`react/UITitle renders correctly - modifier different than level 1`] = `
<div>
  <h1
    class="ui-title ui-title--5--large"
  >
    Test
  </h1>
</div>
`;

exports[`react/UITitle renders correctly - with id 1`] = `
<div>
  <h1
    class="ui-title ui-title--1"
    id="test"
  >
    Test
  </h1>
</div>
`;

exports[`react/UITitle renders correctly - with itemprop 1`] = `
<div>
  <h1
    class="ui-title ui-title--1"
    itemprop="name"
  >
    Test
  </h1>
</div>
`;
